@@ -17,7 +17,7 @@
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA
 # Process this file with autoconf to produce a configure script.
 
-AC_INIT(ASCII.def, 0.73, gm2@nongnu.org)
+AC_INIT(ASCII.def, 0.78, gm2@nongnu.org)
 AC_CONFIG_HEADER(gm2-libs-host.h:gm2-libs-host.h.in)
 
 # Checks for programs.
