@@ -46,7 +46,7 @@
 @c
 @vskip 0pt plus 1filll
 Copyright @copyright{} 2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007,
-2008, 2009 Free Software Foundation, Inc.
+2008, 2009, 2010 Free Software Foundation, Inc.
 
 Permission is granted to copy, distribute and/or modify this document
 under the terms of the GNU Free Documentation License, Version 1.2 or
@@ -222,16 +222,16 @@ be available when invoked by @samp{-fpim}.
 
 @item 0.70
 ISO exception handling working.  Core exception handling ISO modules
-completed.  Basic ISO IO libraries implemented.
+completed.  Basic ISO IO libraries implemented.  Multi-dimensional
+dynamic arrays complete.  COMPLEX types implemented.
 
 @item 0.80
-a full set of ISO libraries will have been implemented.  GNU Modula-2
-will be sufficiently ISO compliant to compile the libraries but will
-not yet be able to fully conform to the ISO Modula-2 standard.
-COMPLEX types implemented.
+a full set of ISO libraries will have been implemented.
+This release point marks the bug fixing of libraries and porting
+and fixing bugs.
 
 @item 0.90
-Multi-dimensional dynamic arrays complete.  This release marks the
+This release marks the
 porting and bug fixing and rapid releasing count down towards..
 
 @item 1.0
