@@ -1,1 +1,1 @@
-#define version_string  "0.73"
+#define version_string  "0.78"
